--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,18 @@
   }
 }
 
+
+
 .App-header {
-  background-color: #282c34;
+  background-color: #FA927E;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: stretch;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #31333B;
 }
 
 .App-link {
